--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic Tac Toe</title>
+    <title>Impossible Tic Tac Toe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
+        <h1 class="title">Impossible Tic Tac Toe</h1>
+        <div class="toggle-container">
+            <span class="toggle-label">X</span>
+            <label class="toggle-switch">
+                <input type="checkbox" id="ai-first-toggle">
+                <span class="slider"></span>
+            </label>
+            <span class="toggle-label">O</span>
+        </div>
         <div class="board">
             <div class="cell" id="0"></div>
             <div class="cell" id="1"></div>
@@ -20,7 +29,7 @@
             <div class="cell" id="8"></div>
         </div>
         <div class="status">Player X's turn</div>
-        <button class="btn btn-primary btn-restart">Restart Game</button>
+        <button class="btn-restart">Restart Game</button>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
